local storage config

--- a/speedometer.html
+++ b/speedometer.html
@@ -33,6 +33,6 @@
         </div>
     </div>
 </body>
-
-<script src="speedometer.js"></script>
+    <script src="storage.js"></script>
+    <script src="speedometer.js"></script>
 </html> 
