--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Ride</title>
 </head>
 <body>
+    
+    <ul id="rideList">
+
+    </ul>
+
     <a href="speedometer.html">New</a>
+    <script src="storage.js"></script>
+    <script src="index.js"></script>
+
 </body>
+
 </html> 
